<resources>
    <string name="app_name">SE Admin Panel</string>
    <string name="notice_demo">"ডিপ্লোমা-ইন-টেক্সটাইল ইঞ্জিনিয়ারিং শিক্ষাক্রমের শিক্ষার্থীদের পুনঃভর্তির বিজ্ঞপ্তি প্রকাশিত হয়েছে।\n✅ শিক্ষার্থী কর্তৃক প্রতিষ্ঠান বরাবর আবেদনের সময়সীমাঃ ০৫/০৯/২০২৪ ইং থেকে ৩০/০৯/২০২৪ ইং তারিখ পর্যন্ত।"</string>
    <string name="fab_icon">Fab Icon</string>
    <string name="enter_your_notice_here">Enter your notice here</string>
    <string name="logo">Logo</string>
    <string name="dead">শোক সংবাদ</string>
    <string name="hollyday">ছুটি</string>
    <string name="news">নিউজ</string>
    <string name="notice">নোটিশ</string>
    <string name="category_name">📛 %1$s 📛</string>
    <string name="category_dead_name">⚫ %1$s ⚫</string>
    <string name="cat_name_demo">📛 নোটিশ 📛</string>
    <string name="my_birthday">Oct 20, 2024</string>
    <string name="_27_loves">27 Loves</string>
    <string name="loved">Loved</string>
    <string name="love">Love</string>
    <string name="loves">%1$s Loves</string>
    <string name="share_this_notice">Share this Notice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">Background</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="myFullName">Labib UR Rahman</string>
    <string name="myNickname">LaBiB</string>


    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ App Feature Item ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string-array name="appFeatureId">
        <item>news</item>
        <item>notice</item>
        <item>institute</item>
        <item>book</item>
        <item>department</item>
        <item>video</item>
        <item>result</item>
        <item>cgpa</item>
        <item>jobs</item>

        <item>CT</item>
        <item>MT</item>
        <item>ET</item>
        <item>CST</item>
        <item>ENT</item>
        <item>PT</item>
        <item>CNT</item>
        <item>AIDT</item>
        <item>FT</item>
        <!-- String[] id = findViewById(R.string.CT) {"news", "notice", "bookology", "book", "department", "video", "result", "cgpa", "institute"}; -->
    </string-array>
    <string-array name="appFeatureTitle">
        <item>News Feed</item>
        <item>Notice Board</item>
        <item>All Institute</item>
        <item>Academic\nBooks</item>
        <item>All\nDepartment</item>
        <item>Video\nClass</item>
        <item>Diploma\nResult</item>
        <item>CGPA\nCalculator</item>
        <item>Search\nJobs</item>

        <item>Civil Technology</item>
        <item>Mechanical Technology</item>
        <item>Electrical Technology</item>
        <item>Computer Science &amp; Technology</item>
        <item>Electronics Technology</item>
        <item>Power Technology</item>
        <item>Construction Technology</item>
        <item>Architecture &amp; Interior Design Technology</item>
        <item>Food Technology</item>
        <!-- String[] title = {"News Feed", "Notice Board", "Bookology", "Academic\nBooks", "All\nDepartment", "Video\nClass", "Diploma\nResult", "CGPA\nCalculator", "All\nInstitute"}; -->
    </string-array>
    <string-array name="appFeatureImageUrl">
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/Dashboard%20Icon%2Fnews.png?alt=media&amp;token=92197abe-5e26-4400-b0d9-537a692bfd93</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/Dashboard%20Icon%2Fspeaker.png?alt=media&amp;token=dc625da3-961e-4d94-a4bc-7b276ffaa036</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/Dashboard%20Icon%2Funiversity.png?alt=media&amp;token=fb43c68d-b309-42ca-a59a-544e4e14fd95</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/Dashboard%20Icon%2Fcourse.png?alt=media&amp;token=adc8536a-f09d-4542-8526-1049d59381be</item>
        <item>https://i.ibb.co/8PQMPMm/department.png</item>
        <item>https://i.ibb.co/JCg4LMT/online-meeting.png</item>
        <item>https://i.ibb.co/TbKqJ3z/grades.png</item>
        <item>https://i.ibb.co/vhzDDZG/summa-cum-laude.png</item>
        <item>https://i.ibb.co/Wzshwn7/job-seeker.png</item>

        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Fcivil_engineers.png?alt=media&amp;token=e8c7f4f3-7953-4a1d-8f3c-18d656376178</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Frepair.png?alt=media&amp;token=13c28183-f540-4f77-82a6-20831f339319</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Felectric-pole.png?alt=media&amp;token=8e831fba-b54d-4f63-9d92-5a0502cbd0ea</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Fcoding.png?alt=media&amp;token=a421ecd5-2a07-4026-acc4-0d51988008e7</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Fgadgets.png?alt=media&amp;token=7cbc5316-8525-48a7-b31d-286da3b8e9b1</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Fpower.png?alt=media&amp;token=b1e5f05a-94f8-4434-a41c-e0fa730fd236</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Fconstruction_project.png?alt=media&amp;token=3fcf871e-3a3e-4c1a-81d4-990f333964c8</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Finterior.png?alt=media&amp;token=3029c814-0156-452a-b42a-4efb7f79f0b2</item>
        <item>https://firebasestorage.googleapis.com/v0/b/lur-icon.appspot.com/o/category_item%2Ffood-delivery.png?alt=media&amp;token=1924412a-d984-42e1-899d-37796f0efbc2</item>

        <!-- String[] imageUrl = {"https://i.ibb.co/8731pPR/news.png", "https://i.ibb.co/cQnjNGn/speaker.png", "https://i.ibb.co/zZ8P5wc/study.png", "https://i.ibb.co/3yhbmXh/course.png", "https://i.ibb.co/8PQMPMm/department.png", "https://i.ibb.co/JCg4LMT/online-meeting.png", "https://i.ibb.co/TbKqJ3z/grades.png", "https://i.ibb.co/vhzDDZG/summa-cum-laude.png", "https://i.ibb.co/51Wcxb1/university.png"}; -->
    </string-array>


    <!-- ================================================================================================== -->
    <!--                                           LOGIN & SIGNUP                                           -->
    <!-- ================================================================================================== -->

    <!-- Splash Activity -->
    <string name="sloganSmartEngineer">\'উৎসর্গ সকল স্মার্ট ইঞ্জিনিয়ারদের প্রতি\'</string>

    <!-- Side Bar -->
    <string name="smart_engineer_logo">Smart Engineer Logo</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="sl_icon">SL Icon</string>
    <string name="facebook">Facebook</string>

    <!-- Login Fragment -->
    <string name="welcome">Welcome,</string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>

    <!-- Signup Fragment -->
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_social_media">Continue with Social Media</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ocean_watter_flow_blue_background_color">Ocean Watter Flow Blue Background Color</string>
    <string name="home_top_background">Home Top Background</string>
    <string name="menu_image">Menu image</string>
    <string name="rocket">Rocket</string>
    <string name="smart">Smart</string>
    <string name="e">E</string>
    <string name="ngineer">ngineer</string>
    <string name="ing">ing</string>
    <string name="learning_app">Learning App</string>
    <string name="copyright">© Smart Engineer ♥ Labib UR Rahman</string>
    <string name="main_admin">Main Admin</string>
    <string name="avater">Avater</string>
    <string name="labib_ur_rahman">Labib UR Rahman</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="icon">Icon</string>
    <string name="make_as_admin">Make as Admin</string>
    <string name="make_as_main_admin">Make as Main Admin</string>
    <string name="contact_labibur_gmail_com">contact.labibur@gmail.com</string>
    <string name="name">Name</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="make_as_user">Make as User</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="present_role">Present Role:</string>
    <string name="book_cover">Book Cover</string>
    <string name="add_new_post">Add New Post</string>
    <string name="book_name">Book Name</string>
    <string name="subject_code">Subject Code</string>
    <string name="total_units">Total Units</string>
    <string name="select_department">Select Department</string>
    <string name="selected_none">Selected: None</string>
    <string name="select_semesters">Select Semesters</string>
    <string name="post">Post</string>
    <string name="all_book_list">All Book List</string>
    <string name="add_book">Add Book</string>
    <string name="create_a_new_book">Create a new book</string>
    <string name="all_books">All Books</string>
    <string name="_21011">21011</string>
    <string name="_254">254</string>
    <string name="read_now">Read Now</string>
    <string name="total_reads">Total Reads</string>
    <string name="_07">07</string>
    <string name="units">Units</string>
    <string name="unit_0_unit_name">Unit 0: Unit Name</string>
    <string name="department">Department</string>
    <string name="tag">Tags</string>
    <string name="edit_book_details">Edit Book Details</string>
    <string name="add_new_unit">Add New Unit</string>

</resources>