<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clickNoticeItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="13dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg_notice_item">


    <LinearLayout
        android:id="@+id/ll_itemBG"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_notice_item_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/smart_engineer_logo"
            android:padding="8dp"
            android:src="@drawable/logo_orange_black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoticeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font_regular_2"
        android:text="@string/notice"
        android:layout_marginStart="16dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/mainContainer_HeadingText"
        app:layout_constraintStart_toEndOf="@+id/ll_itemBG"
        app:layout_constraintTop_toTopOf="@+id/ll_itemBG" />

    <TextView
        android:id="@+id/tvNoticeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-3dp"
        android:fontFamily="@font/main_font_regular_2"
        android:text="@string/my_birthday"
        android:textColor="@color/mainContainer_SubHeadingText"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ll_itemBG"
        app:layout_constraintTop_toBottomOf="@+id/tvNoticeTitle" />

    <TextView
        android:id="@+id/tvNoticeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/main_font_regular_2"
        android:text="@string/notice_demo"
        android:textColor="@color/mainContainer_HeadingText"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/icLove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_itemBG" />

    <ImageView
        android:id="@+id/menuImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/sl_icon"
        android:src="@drawable/sl_dots_horizontal_alt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_itemBG"/>

    <ImageView
        android:id="@+id/icLove"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/sl_icon"
        android:src="@drawable/sl_heart"
        app:layout_constraintBottom_toBottomOf="@+id/btnLove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLove"
        app:layout_constraintVertical_bias="0.70" />

    <TextView
        android:id="@+id/tvLovesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font_regular_2"
        android:text="@string/_27_loves"
        android:textColor="@color/mainContainer_HeadingText"
        android:textSize="13sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/icLove"
        app:layout_constraintStart_toEndOf="@+id/icLove"
        app:layout_constraintTop_toTopOf="@+id/icLove" />

    <LinearLayout
        android:id="@+id/btnLove"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_notice_item_love"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btnLoved"
        app:layout_constraintEnd_toEndOf="@id/btnLoved"
        app:layout_constraintStart_toStartOf="@+id/btnLoved"
        app:layout_constraintTop_toTopOf="@+id/btnLoved">

        <ImageView
            android:id="@+id/btnIconLove"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/smart_engineer_logo"
            android:src="@drawable/sl_heart_not_fill" />

        <TextView
            android:id="@+id/btnTextLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/main_font_regular_2"
            android:text="@string/love"
            android:textColor="@color/ic_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/icLove"
            app:layout_constraintStart_toEndOf="@+id/icLove"
            app:layout_constraintTop_toTopOf="@+id/icLove" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnLoved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="8dp"
        android:visibility="visible"
        android:paddingEnd="8dp"
        android:background="@drawable/bg_notice_item_loved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnIconLoved"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/smart_engineer_logo"
            android:src="@drawable/sl_heart_red" />

        <TextView
            android:id="@+id/btnTextLoved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/main_font_regular_2"
            android:textStyle="bold"
            android:text="@string/loved"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/icLove"
            app:layout_constraintStart_toEndOf="@+id/icLove"
            app:layout_constraintTop_toTopOf="@+id/icLove" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>