<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clickUnitItem"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:gravity="center_vertical"
    android:paddingStart="13dp"
    android:paddingEnd="13dp">

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/smart_engineer_logo"
        android:src="@drawable/sl_reading_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/unitName"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/icRightArrow"
        android:layout_toEndOf="@+id/bookImage"
        android:ellipsize="end"
        android:fontFamily="@font/main_font_regular_2"
        android:maxLines="2"
        android:lineHeight="20dp"
        android:text="@string/unit_0_unit_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icRightArrow"
        app:layout_constraintStart_toEndOf="@+id/bookImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/icRightArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/sl_icon"
        android:src="@drawable/sl_double_alt_arrow_unit_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>